Initialize spring boot apps and parent-child pom
1. Updated the stock/pom.xml and portfolio/pom.xml
2. Added the root pom.xml
3. Added some other files

--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -3,14 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.zstock0holics</groupId>
+		<artifactId>ZStock0holics</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
-	<groupId>com.zstock0holics</groupId>
 	<artifactId>portfolio</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<!-- <version>0.0.1-SNAPSHOT</version> -->
 	<name>Portfolio</name>
 	<description>Portfolio project for zstock0holics</description>
 	<properties>
