Dockerize the apps
also added architecture diagram

--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -32,6 +32,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>portfolio</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
