--- a/stock/pom.xml
+++ b/stock/pom.xml
@@ -32,6 +32,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>stock</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
