Show actuators, Build scripts and Indent JSON
1) Indented the JSON output for both apps
2) Added acutuators for both apps
3) Added the build.cmd and create-images.cmd scripts for usage

Signed-off-by: Dhruvin Rupesh Soni <dhruvin.soni@zebra.com>

--- a/stock/src/main/resources/application.properties
+++ b/stock/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 server.port=9080
 server.servlet.context-path=/zstock0holics
+
+spring.jackson.serialization.INDENT_OUTPUT = true
+
+management.endpoints.web.exposure.include=*
+info.app.name=stock
+
+
