--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,17 @@
 	<packaging>pom</packaging>
 	<properties>
 		<java.version>1.8</java.version>
-		<spring-boot-starter.version>2.7.4</spring-boot-starter.version>
-		<spring-boot-starter-test.version>2.7.4</spring-boot-starter-test.version>
-		<spring-boot-starter-web.version>2.7.4</spring-boot-starter-web.version>
+		<!-- <spring-boot-devtools.version>2.7.5</spring-boot-devtools.version> -->
+		<spring-boot-starter.version>2.7.5</spring-boot-starter.version>
+		<spring-boot-starter-actuator.version>2.7.5</spring-boot-starter-actuator.version>
+		<!-- <spring-boot-starter-security.version>2.7.5</spring-boot-starter-security.version> -->
+		<spring-boot-starter-test.version>2.7.5</spring-boot-starter-test.version>
+		<spring-boot-starter-web.version>2.7.5</spring-boot-starter-web.version>
+		<!-- <spring-security-web.version>5.7.5</spring-security-web.version> -->
+		
+		
+		<maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format>
+		
 	</properties>
 	<repositories></repositories>
 	<profiles>
@@ -65,24 +73,50 @@
 				<artifactId>portfolio</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-
+			
+			<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter</artifactId>
 				<version>${spring-boot-starter.version}</version>
 			</dependency>
-
+			<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-test</artifactId>
 				<version>${spring-boot-starter-test.version}</version>
 				<scope>test</scope>
 			</dependency>
+			 <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
 			 <dependency>
 		      <groupId>org.springframework.boot</groupId>
 		      <artifactId>spring-boot-starter-web</artifactId>
 		      <version>${spring-boot-starter-web.version}</version>
 		    </dependency>
+		    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
+		    <dependency>
+			    <groupId>org.springframework.boot</groupId>
+			    <artifactId>spring-boot-starter-actuator</artifactId>
+			    <version>${spring-boot-starter-actuator.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+			<!-- <dependency>
+			    <groupId>org.springframework.security</groupId>
+			    <artifactId>spring-security-web</artifactId>
+			    <version>${spring-security-web.version}</version>
+			</dependency> -->
+			<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+			<!-- <dependency>
+			    <groupId>org.springframework.boot</groupId>
+			    <artifactId>spring-boot-starter-security</artifactId>
+			    <version>${spring-boot-starter-security.version}</version>
+			</dependency> -->
+			<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+			<!-- <dependency>
+			    <groupId>org.springframework.boot</groupId>
+			    <artifactId>spring-boot-devtools</artifactId>
+			    <version>${spring-boot-devtools.version}</version>
+			</dependency> -->
 		</dependencies>
 	</dependencyManagement>
 	
