--- a/portfolio/src/main/resources/application.properties
+++ b/portfolio/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 server.port=9081
 server.servlet.context-path=/zstock0holics
+
+spring.jackson.serialization.INDENT_OUTPUT = true
+
+management.endpoints.web.exposure.include=*
+info.app.name=portfolio
+
