Refactoring of application from stock to stocks
1) Renamed into the root pom.xml
2) Updated in Dockerfile
3) Updated in the stocks/pom.xml
4) Updated the application.properties
5) Updated the package in main and test

Signed-off-by: Dhruvin Rupesh Soni <dhruvin.soni@zebra.com>

--- a/pom.xml
+++ b/pom.xml
@@ -40,15 +40,15 @@
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<modules>
-				<module>stock</module>
+				<module>stocks</module>
 				<module>portfolio</module>
 			</modules>
 		</profile>
 
 		<profile>
-			<id>stock</id>
+			<id>stocks</id>
 			<modules>
-				<module>stock</module>
+				<module>stocks</module>
 			</modules>
 		</profile>
 
@@ -65,7 +65,7 @@
 		<dependencies>
 			<dependency>
 				<groupId>com.zstock0holics</groupId>
-				<artifactId>stock</artifactId>
+				<artifactId>stocks</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
