--- a/stocks/src/main/resources/application.properties
+++ b/stocks/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.servlet.context-path=/zstock0holics
 spring.jackson.serialization.INDENT_OUTPUT = true
 
 management.endpoints.web.exposure.include=*
-info.app.name=stock
+info.app.name=stocks
 
 
