Publish images to GitHub Packages
1) Added Scripts to publish images to GitHub Packages
2) Added LABEL of LABEL org.opencontainers.image.source with the repo value of https://github.com/dhruvinrsoni-zebra/zstock0holics to attach the package to repository on the repo page

Signed-off-by: Dhruvin Rupesh Soni <dhruvin.soni@zebra.com>

--- a/stocks/Dockerfile
+++ b/stocks/Dockerfile
@@ -7,4 +7,6 @@ COPY target/stocks.jar .
 #VOLUME /mount
 EXPOSE 9080
 
+LABEL org.opencontainers.image.source=https://github.com/dhruvinrsoni-zebra/zstock0holics
+
 ENTRYPOINT ["java", "-jar", "stocks.jar"]
