--- a/portfolio/Dockerfile
+++ b/portfolio/Dockerfile
@@ -7,4 +7,6 @@ COPY target/portfolio.jar .
 #VOLUME /mount
 EXPOSE 9081
 
+LABEL org.opencontainers.image.source=https://github.com/dhruvinrsoni-zebra/zstock0holics
+
 ENTRYPOINT ["java", "-jar", "portfolio.jar"]
