--- a/portfolio/src/main/resources/application.properties
+++ b/portfolio/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9081
-server.servlet.context-path=/zstock0holics
+#server.servlet.context-path=/zstock0holics
 
 spring.jackson.serialization.INDENT_OUTPUT = true
 
